--- a/requirements-hiervae.txt
+++ b/requirements-hiervae.txt
@@ -54,6 +54,7 @@ nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
 packaging==23.1
+pandas==1.3.5
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -86,6 +87,7 @@ torch==1.13.1
 tqdm==4.66.1
 traitlets==5.10.0
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==2.0.5
 uvicorn==0.23.2
 wcwidth==0.2.6
