--- a/requirements-hiervae.txt
+++ b/requirements-hiervae.txt
@@ -1,151 +1,97 @@
-name: /home/mpds/python/generative-optim/venv-hiervae
-channels:
-  - conda-forge
-  - defaults
-dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2024.2.2=hbcca054_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - debugpy=1.8.1=py38h17151c0_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - importlib_metadata=7.0.2=hd8ed1ab_0
-  - ipykernel=6.29.3=pyhd33586a_0
-  - jupyter_client=8.6.1=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py38h578d9bd_0
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=h807b86a_2
-  - libgomp=13.2.0=h807b86a_2
-  - libnsl=2.0.0=h7f98852_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.43.0=h2797004_0
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libuuid=2.38.1=h0b41bf4_0
-  - libzlib=1.2.13=hd590300_5
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - ncurses=6.4=hcb278e6_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.2.1=hd590300_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pip=23.2.1=pyhd8ed1ab_0
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - prompt_toolkit=3.0.42=hd8ed1ab_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - python=3.8.17=he550d4f_0_cpython
-  - python_abi=3.8=4_cp38
-  - pyzmq=25.1.2=py38h34c975a_0
-  - readline=8.2=h8228510_1
-  - setuptools=68.2.2=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.13=h2797004_0
-  - tornado=6.4=py38h01eb140_0
-  - typing_extensions=4.10.0=pyha770c72_0
-  - wheel=0.41.2=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - zeromq=4.3.5=h59595ed_1
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - pip:
-      - about-time==4.2.1
-      - aim==3.17.5
-      - aim-ui==3.17.5
-      - aimrecords==0.0.7
-      - aimrocks==0.4.0
-      - aiofiles==23.2.1
-      - alembic==1.12.0
-      - alive-progress==3.1.4
-      - annotated-types==0.5.0
-      - anyio==3.7.1
-      - asttokens==2.4.0
-      - autograd==1.6.2
-      - backoff==2.2.1
-      - base58==2.0.1
-      - black==24.3.0
-      - cachetools==5.3.1
-      - certifi==2023.7.22
-      - cffi==1.15.1
-      - charset-normalizer==3.2.0
-      - click==8.1.7
-      - cma==3.2.2
-      - contourpy==1.1.1
-      - cryptography==41.0.4
-      - cycler==0.11.0
-      - deprecated==1.2.14
-      - dill==0.3.7
-      - exceptiongroup==1.1.3
-      - executing==1.2.0
-      - fastapi==0.103.1
-      - filelock==3.12.4
-      - fonttools==4.42.1
-      - future==0.18.3
-      - grapheme==0.6.0
-      - greenlet==2.0.2
-      - grpcio==1.58.0
-      - h11==0.14.0
-      - idna==3.4
-      - importlib-metadata==6.8.0
-      - importlib-resources==6.1.0
-      - iniconfig==2.0.0
-      - ipython==8.12.2
-      - jedi==0.19.0
-      - jinja2==3.1.2
-      - kiwisolver==1.4.5
-      - mako==1.2.4
-      - markupsafe==2.1.3
-      - matplotlib==3.7.3
-      - monotonic==1.6
-      - mypy-extensions==1.0.0
-      - networkx==2.6.3
-      - numpy==1.20.0
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - openbabel==3.1.1.1
-      - packaging==23.1
-      - pandas==1.3.5
-      - pathspec==0.12.1
-      - pexpect==4.8.0
-      - pillow==9.5.0
-      - plotly==5.17.0
-      - pluggy==1.4.0
-      - prompt-toolkit==3.0.39
-      - protobuf==4.24.3
-      - psutil==5.9.5
-      - py3nvml==0.2.7
-      - pycparser==2.21
-      - pydantic==2.4.0
-      - pydantic-core==2.10.0
-      - pygments==2.16.1
-      - pymoo==0.6.0.1
-      - pyparsing==3.1.1
-      - pytest==8.1.1
-      - python-dateutil==2.8.2
-      - pytz==2023.3.post1
-      - rdkit-pypi==2020.9.5.2
-      - requests==2.31.0
-      - restrictedpython==6.2
-      - scienceplots==2.1.1
-      - scipy==1.10.1
-      - segment-analytics-python==2.2.3
-      - sniffio==1.3.0
-      - sqlalchemy==1.4.49
-      - starlette==0.27.0
-      - tenacity==8.2.3
-      - tomli==2.0.1
-      - torch==1.13.1
-      - tqdm==4.66.1
-      - traitlets==5.10.0
-      - typing-extensions==4.7.1
-      - tzdata==2023.3
-      - urllib3==2.0.5
-      - uvicorn==0.23.2
-      - wcwidth==0.2.6
-      - wrapt==1.15.0
-      - xmltodict==0.13.0
-prefix: /home/mpds/python/generative-optim/venv-hiervae
+about-time==4.2.1
+aim==3.17.5
+aim-ui==3.17.5
+aimrecords==0.0.7
+aimrocks==0.4.0
+aiofiles==23.2.1
+alembic==1.12.0
+alive-progress==3.1.4
+annotated-types==0.5.0
+anyio==3.7.1
+asttokens==2.4.0
+autograd==1.6.2
+backoff==2.2.1
+base58==2.0.1
+black==24.3.0
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+cma==3.2.2
+contourpy==1.1.1
+cryptography==41.0.4
+cycler==0.11.0
+deprecated==1.2.14
+dill==0.3.7
+exceptiongroup==1.1.3
+executing==1.2.0
+fastapi==0.103.1
+filelock==3.12.4
+fonttools==4.42.1
+future==0.18.3
+grapheme==0.6.0
+greenlet==2.0.2
+grpcio==1.58.0
+h11==0.14.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+iniconfig==2.0.0
+ipython==8.12.2
+jedi==0.19.0
+jinja2==3.1.2
+kiwisolver==1.4.5
+mako==1.2.4
+markupsafe==2.1.3
+matplotlib==3.7.3
+monotonic==1.6
+mypy-extensions==1.0.0
+networkx==2.6.3
+numpy==1.20.0
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+openbabel==3.1.1.1
+packaging==23.1
+pandas==1.3.5
+pathspec==0.12.1
+pexpect==4.8.0
+pillow==9.5.0
+plotly==5.17.0
+pluggy==1.4.0
+prompt-toolkit==3.0.39
+protobuf==4.24.3
+psutil==5.9.5
+py3nvml==0.2.7
+pycparser==2.21
+pydantic==2.4.0
+pydantic-core==2.10.0
+pygments==2.16.1
+pymoo==0.6.0.1
+pyparsing==3.1.1
+pytest==8.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+rdkit-pypi==2020.9.5.2
+requests==2.31.0
+restrictedpython==6.2
+scienceplots==2.1.1
+scipy==1.10.1
+segment-analytics-python==2.2.3
+sniffio==1.3.0
+sqlalchemy==1.4.49
+starlette==0.27.0
+tenacity==8.2.3
+tomli==2.0.1
+torch==1.13.1
+tqdm==4.66.1
+traitlets==5.10.0
+typing-extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.5
+uvicorn==0.23.2
+wcwidth==0.2.6
+wrapt==1.15.0
+xmltodict==0.13.0
